--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
 [dependencies]
-error-chain = "0.10"
-lazy_static = "0.2.8"
+#error-chain = "0.10"
+#cached = "0.4.1"
+#lazy_static = "0.2.8"
+log = "0.3.8"
 time = "0.1"
+scheduled-executor = "0.3.0"
+tokio-core = "0.1.8"
 
 [features]
 bench = []
