--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 log = "0.3.8"
 time = "0.1"
 scheduled-executor = "0.3.0"
-tokio-core = "0.1.8"
+thread_local = "0.3"
 
 [features]
 bench = []
