--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
 [dependencies]
+# not yet required
 #error-chain = "0.10"
+lazy_static = "0.2.8"
 cached = "0.4.1"
-#lazy_static = "0.2.8"
 log = "0.3.8"
 time = "0.1"
 scheduled-executor = "0.3.0"
-#thread_local = "0.3"
-thread-local-object = { path = '../thread-local-object' }
+thread-local-object = "0.1.0"
 
 [features]
 bench = []
