--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ time = "0.1"
 scheduled-executor = "0.3.0"
 thread-local-object = "0.1.0"
 num = "0.1.40"
+error-chain = "0.10.0"
 
 [features]
 bench = []
