(cargo-release) start next development iteration 0.4.18-alpha.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 
 [package]
 name = "dipstick"
-version = "0.4.17"
+version = "0.4.18-alpha.0"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
 description = """A fast and modular metrics library decoupling app instrumentation from reporting backend.
