(cargo-release) version 0.6.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
 
 [package]
 name = "dipstick"
-version = "0.6.2-alpha.0"
+version = "0.6.2"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
 description = """A fast and modular metrics library decoupling app instrumentation from reporting backend.
