--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "examples/counter_timer_gauge/",
   "examples/multi_outs/",
   "examples/aggregate_print/",
+  "examples/summary_print/",
   "examples/async_print/",
   "examples/custom_publish/",
   "examples/raw_log/",
