--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "./",
   "examples/counter_timer_gauge/",
   "examples/multi_outs/",
+  "examples/macro_outs/",
   "examples/aggregate_print/",
   "examples/summary_print/",
   "examples/async_print/",
