--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ lazy_static = "1.0"
 derivative = "1.0"
 atomic_refcell = "0.1"
 
-[build-dependencies]
-skeptic = "0.13"
+#[build-dependencies]
+#skeptic = "0.13"
 
 [dev-dependencies]
 skeptic = "0.13"
