Fabtastic unified API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ time = "0.1"
 lazy_static = "1.0"
 derivative = "1.0"
 atomic_refcell = "0.1"
+chrono = "^0.3"
 
 #[build-dependencies]
 #skeptic = "0.13"
