--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,14 @@ travis-ci = { repository = "fralalonde/dipstick", branch = "master" }
 
 [dependencies]
 log = "0.4"
-time = "0.1"
 lazy_static = "1.0"
 derivative = "1.0"
 atomic_refcell = "0.1"
 skeptic = { version = "0.13", optional = true }
 num = { version = "0.1", default-features = false }
+
+# FIXME required only for random seed for sampling
+time = "0.1"
 
 [build-dependencies]
 skeptic = { version = "0.13", optional = true }
