--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,10 @@ num = { version = "0.1", default-features = false }
 
 # FIXME required only for random seed for sampling
 time = "0.1"
-# optional dep for prometheus format
-protobuf = { version = "2", features = ["with-bytes"], optional = true }
+
+# optional dep for prometheus binary format
+protobuf = { version = "2", optional = true }
+
 # optional dep for standalone http pull metrics
 tiny_http = { version = "0.6.0", optional = true }
 
