--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dipstick"
-version = "0.7.0-alpha.0"
+version = "0.7.0"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
 description = """A fast and modular metrics library decoupling app instrumentation from reporting backend.
@@ -19,7 +19,7 @@ travis-ci = { repository = "fralalonde/dipstick", branch = "master" }
 
 [dependencies]
 log = "0.4"
-lazy_static = "1.0"
+lazy_static = "1"
 atomic_refcell = "0.1"
 skeptic = { version = "0.13", optional = true }
 num = { version = "0.1", default-features = false }
@@ -31,7 +31,7 @@ time = "0.1"
 protobuf = { version = "2", optional = true }
 
 # optional dep for standalone http pull metrics
-tiny_http = { version = "0.6.0", optional = true }
+tiny_http = { version = "0.6", optional = true }
 
 [build-dependencies]
 skeptic = { version = "0.13", optional = true }
@@ -46,7 +46,7 @@ prometheus = []
 
 [package.metadata.release]
 #sign-commit = true
-#upload-doc = true
+#upload-handbook = true
 pre-release-replacements = [
   {file="README.md", search="dipstick = \"[a-z0-9\\.-]+\"", replace="dipstick = \"{{version}}\""}
   ]
