--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tiny_http = { version = "0.6", optional = true }
 skeptic = { version = "0.13", optional = true }
 
 [features]
-default-features = [ "self_metrics", "tiny_http" ]
+default = [ "self_metrics" ]
 bench = []
 self_metrics = []
 tokio = []
