--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "dipstick"
-version = "0.7.3-alpha.0"
+version = "0.7.3"
 authors = ["Francis Lalonde <fralalonde@gmail.com>"]
 
-description = """A featureful, fast and fun metrics library decoupling app instrumentation from reporting backends.
+description = """A fast, all-purpose metrics library decoupling instrumentation from reporting backends.
  Similar to popular logging frameworks, but with counters, timers and gauges.
- Lots of features like combined outputs (e.g. log + graphite), sampling, aggregation, periodical publication, etc."""
+ Can combine outputs (e.g. log + graphite), do sampling, aggregation, periodical publication, etc."""
 
 documentation = "https://docs.rs/dipstick"
 homepage = "https://github.com/fralalonde/dipstick"
